--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ allprojects {
 
     version = '1.0'
     ext {
-        appName = "TinexS"
+        appName = "Tinex"
         gdxVersion = '1.9.10'
         roboVMVersion = '2.3.8'
         box2DLightsVersion = '1.4'
@@ -35,6 +35,8 @@ allprojects {
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         maven { url "https://oss.sonatype.org/content/repositories/releases/" }
     }
+
+
 }
 
 project(":desktop") {
@@ -45,8 +47,8 @@ project(":desktop") {
         implementation project(":core")
         api "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
         api "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
-        api "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
         api "com.badlogicgames.gdx:gdx-tools:$gdxVersion"
+
         
     }
 }
@@ -57,7 +59,18 @@ project(":core") {
 
     dependencies {
         api "com.badlogicgames.gdx:gdx:$gdxVersion"
-        api "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
-        
+
+
+        implementation 'org.junit.jupiter:junit-jupiter:5.6.0'
+    }
+
+    test {
+        useJUnitPlatform()
     }
 }
+
+
+
+
+
+
